# SGemmTransform

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: CMakeLists.txt  SGemm.h  SGemm.td
lib/: CMakeLists.txt  SGemm.cpp
scripts/: check_transdformed.sh  opt.sh  run.sh  run_transform.sh  sgemm-pause.sh  sgemm-resume.sh  sgemm-start.sh  test_transform.sh
sgemm-opt/: sgemm-opt.cpp
test/: matmul.mlir  payload.mlir  sgem16_16.mlir  sgem4_16.mlir  sgem8_16.mlir  sgemm.mlir
transform-opt/: transform-opt.cpp
